--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Toonia - عالم الأنمي</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
     
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 
@@ -81,6 +81,6 @@
     </nav>
 </div>
 
-<script src="script.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
