--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Toonia - عالم الأنمي</title>
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    
     <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
@@ -15,9 +15,9 @@
         <div class="menu-icon">
             <i class="fas fa-bars"></i>
         </div>
-        
+
         <a href="#" class="logo-box">
-            <img src="assets/img/toonia-icon.webp" alt="Toonia Logo" />
+            <img src="assets/img/toonia-icon.webp" alt="Toonia Logo">
             <div class="site-name">Too<span>nia</span></div>
         </a>
     </div>
@@ -27,17 +27,13 @@
             <i class="fas fa-search"></i>
         </div>
         <a href="/login" class="login-button">
-            <i class="fas fa-user"></i>
-            تسجيل الدخول
+            <i class="fas fa-user"></i> تسجيل الدخول
         </a>
     </div>
 </header>
 
-
-
 <section class="hero-container">
-    <img class="hero-bg" src="assets/img/hero.webp" alt="خلفية أنمي" />
-
+    <img class="hero-bg" src="assets/img/hero.webp" alt="خلفية أنمي">
     <div class="hero-overlay"></div>
 
     <div class="hero-content">
@@ -47,8 +43,6 @@
         </div>
     </div>
 </section>
-
-
 
 <div id="aniSidebarContainer">
     <div class="ani-overlay" id="aniOverlay"></div>
@@ -82,6 +76,5 @@
 </div>
 
 <script src="assets/js/main.js"></script>
-
 </body>
 </html>
