--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Toonia - عالم الأنمي</title>
 
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
-    <link rel="stylesheet" href="assets/css/main.css">
+
+    <!-- Main CSS (مسار نسبي صحيح لـ GitHub Pages /toonia/) -->
+    <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
 
@@ -17,7 +20,7 @@
         </div>
 
         <a href="#" class="logo-box">
-            <img src="assets/img/toonia-icon.webp" alt="Toonia Logo">
+            <img src="./assets/img/toonia-icon.webp" alt="Toonia Logo">
             <div class="site-name">Too<span>nia</span></div>
         </a>
     </div>
@@ -26,14 +29,14 @@
         <div class="search-trigger">
             <i class="fas fa-search"></i>
         </div>
-        <a href="/login" class="login-button">
+        <a href="#" class="login-button">
             <i class="fas fa-user"></i> تسجيل الدخول
         </a>
     </div>
 </header>
 
 <section class="hero-container">
-    <img class="hero-bg" src="assets/img/hero.webp" alt="خلفية أنمي">
+    <img class="hero-bg" src="./assets/img/hero.webp" alt="خلفية أنمي">
     <div class="hero-overlay"></div>
 
     <div class="hero-content">
@@ -75,6 +78,7 @@
     </nav>
 </div>
 
-<script src="assets/js/main.js" defer></script>
+<!-- Main JS (مسار نسبي صحيح) -->
+<script src="./assets/js/main.js" defer></script>
 </body>
 </html>
