--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Toonia - عالم الأنمي</title>
 
-    <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
+    <!-- Base URL لمشروع GitHub Pages -->
+    <base href="/toonia/">
 
-    <!-- Main CSS (مسار نسبي صحيح لـ GitHub Pages /toonia/) -->
-    <link rel="stylesheet" href="./assets/css/main.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body>
 
@@ -20,7 +23,7 @@
         </div>
 
         <a href="#" class="logo-box">
-            <img src="./assets/img/toonia-icon.webp" alt="Toonia Logo">
+            <img src="assets/img/toonia-icon.webp" alt="Toonia Logo">
             <div class="site-name">Too<span>nia</span></div>
         </a>
     </div>
@@ -36,7 +39,7 @@
 </header>
 
 <section class="hero-container">
-    <img class="hero-bg" src="./assets/img/hero.webp" alt="خلفية أنمي">
+    <img class="hero-bg" src="assets/img/hero.webp" alt="خلفية أنمي">
     <div class="hero-overlay"></div>
 
     <div class="hero-content">
@@ -78,7 +81,6 @@
     </nav>
 </div>
 
-<!-- Main JS (مسار نسبي صحيح) -->
-<script src="./assets/js/main.js" defer></script>
+<script src="assets/js/main.js" defer></script>
 </body>
 </html>
