--- a/index.html
+++ b/index.html
@@ -5,14 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Toonia - عالم الأنمي</title>
 
-    <!-- Base URL لمشروع GitHub Pages -->
-    <base href="/toonia/">
-
     <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
-    <!-- Main CSS -->
-    <link rel="stylesheet" href="assets/css/main.css">
+    <!-- CSS (مسار مطلق خاص بـ GitHub Pages Project) -->
+    <link rel="stylesheet" href="/toonia/assets/css/main.css">
 </head>
 <body>
 
@@ -23,7 +20,7 @@
         </div>
 
         <a href="#" class="logo-box">
-            <img src="assets/img/toonia-icon.webp" alt="Toonia Logo">
+            <img src="/toonia/assets/img/toonia-icon.webp" alt="Toonia Logo">
             <div class="site-name">Too<span>nia</span></div>
         </a>
     </div>
@@ -39,7 +36,7 @@
 </header>
 
 <section class="hero-container">
-    <img class="hero-bg" src="assets/img/hero.webp" alt="خلفية أنمي">
+    <img class="hero-bg" src="/toonia/assets/img/hero.webp" alt="خلفية أنمي">
     <div class="hero-overlay"></div>
 
     <div class="hero-content">
@@ -81,6 +78,7 @@
     </nav>
 </div>
 
-<script src="assets/js/main.js" defer></script>
+<!-- JS -->
+<script src="/toonia/assets/js/main.js" defer></script>
 </body>
 </html>
